@@ -2,6 +2,17 @@
 
         Reviewed by Tony Chang.
 
+        Port Mozilla's IndexedDB tests: clear()
+        https://bugs.webkit.org/show_bug.cgi?id=59498
+
+        * storage/indexeddb/mozilla: Added.
+        * storage/indexeddb/mozilla/clear-expected.txt: Added.
+        * storage/indexeddb/mozilla/clear.html: Added.
+
+2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Reviewed by Tony Chang.
+
         Port Mozilla's IndexedDB tests: add twice failure
         https://bugs.webkit.org/show_bug.cgi?id=59492
 
